Preserve OTA firmware versions on upload
